refactore the entire frontend via Angular CLI
